[gd_scene load_steps=5 format=3 uid="uid://bdoqd0ohgs8ff"]

[ext_resource type="Script" path="res://scripts/world.gd" id="1_t1g7y"]
[ext_resource type="Texture2D" uid="uid://d2amre3ti587u" path="res://sprites/g12level.png" id="2_xqlp1"]
[ext_resource type="PackedScene" uid="uid://10a7wq5hjg3w" path="res://scenes/player.tscn" id="3_kinpp"]
[ext_resource type="PackedScene" uid="uid://bwbw20gse1yo5" path="res://scenes/ant.tscn" id="4_n6clj"]

[node name="L4" type="Node2D"]
script = ExtResource("1_t1g7y")

[node name="g12_backround" type="Sprite2D" parent="."]
light_mask = 0
position = Vector2(503, 451)
scale = Vector2(1.1045, 0.997222)
texture = ExtResource("2_xqlp1")
region_enabled = true
region_rect = Rect2(0, 0, 1000, 900)

[node name="Player" parent="." instance=ExtResource("3_kinpp")]
position = Vector2(403, 689)

[node name="Enemy" parent="." instance=ExtResource("4_n6clj")]
position = Vector2(421, -109)

[node name="Marker2D_1" type="Marker2D" parent="."]
position = Vector2(70, -52)

[node name="Marker2D_2" type="Marker2D" parent="."]
position = Vector2(168, -53)

[node name="Marker2D_3" type="Marker2D" parent="."]
position = Vector2(260, -55)

[node name="Marker2D_4" type="Marker2D" parent="."]
position = Vector2(349, -48)

[node name="Marker2D_5" type="Marker2D" parent="."]
position = Vector2(447, -49)

[node name="Marker2D_6" type="Marker2D" parent="."]
position = Vector2(539, -51)

[node name="Marker2D_7" type="Marker2D" parent="."]
position = Vector2(619, -51)

[node name="Marker2D_8" type="Marker2D" parent="."]
position = Vector2(717, -52)

[node name="Marker2D_9" type="Marker2D" parent="."]
position = Vector2(809, -54)

[node name="Marker2D_10" type="Marker2D" parent="."]
position = Vector2(911, -50)

[node name="Timer" type="Timer" parent="."]
wait_time = 3.5

[node name="Timer2" type="Timer" parent="."]
wait_time = 3.5

[node name="enemy" type="Node2D" parent="."]

[node name="Timer3" type="Timer" parent="."]
wait_time = 15.0

[connection signal="spawn_crayon" from="Player" to="." method="_on_player_spawn_crayon"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_timer_3_timeout"]
